--- a/index.html
+++ b/index.html
@@ -6,9 +6,10 @@
 <meta name="viewport" content="width=device-width, height=device-height, initial-scale=1, minimum-scale=1"/>
 <meta name="text:Title font" content="Montserrat"/>
 <meta name="text:Content font" content="Montserrat"/>
-<meta name="color:Font color" content="#D3D3D3"/>
+<meta name="color:Font color" content="#222222"/>
 <meta name="text:Google analytics ID" content="UA-154490996-1"/>
 <meta name="text:Copyright" content="ALY Studio"/>
+<meta name="if:Show social icons" content="1"/>
 <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Montserrat">
 <script async src="https://www.googletagmanager.com/gtag/js?id=UA-154490996-1"></script>
 <!-- Global site tag (gtag.js) - Google Analytics -->
@@ -27,19 +28,19 @@
         /***********General Styling ***********/
         * {margin:0px 0px; padding:0px 0px;}
         a{
-            color:#D3D3D3;
+            color:#222222;
             text-decoration:none;
         }
         a:hover{
             text-decoration:none;
-            color:#A9A9A9;
+            color:#529ECC;
         }
         .clearFix{
             clear:both;
         }
         body{
-            background-color:#000000;
-            color:#ffffff;
+            background-color:#ffffff;
+            color:#222222;
             font-family:'Montserrat',Sans-Serif;
             font-size:12px;
         }
@@ -242,6 +243,10 @@
     <div id="title">
         <a href="/">ALY</a>
     </div>
+    <ul id="pages">
+                <li><a href="/about.html">About</a></li> 
+                <li><a href="/works.html">Works</a></li>
+                <li><a href="/personal.html">Personal</a></li>            
     </ul>
     <div class="clearFix"></div>
   
@@ -259,18 +264,103 @@
 <main id="main" class=" index">
     <article class="post photo  index">
         <div class="content">
-            <img draggable="false" ondragstart="return false;" src="1549.jpg" alt="A" onContextMenu="return false;"/>
-            <img draggable="false" ondragstart="return false;" src="79.jpg" alt="B" onContextMenu="return false;"/>
-            <img draggable="false" ondragstart="return false;" src="80.jpg" alt="C" onContextMenu="return false;"/>
+            <img draggable="false" ondragstart="return false;" src="96.jpg" alt="STUDIO PHOTOS" onContextMenu="return false;"/>
+ 	    <img draggable="false" ondragstart="return false;" src="71.jpg" alt="STUDIO PHOTOGRAPHS" onContextMenu="return false;"/>
+
         </div>
         <div class="content" style="display:none;">     
         </div>
     </article>
 
+<article class="post photo  index">
+    <div class="content">
+            <img draggable="false" ondragstart="return false;" src="9277.jpg" alt="H1" onContextMenu="return false;"/>
+            <img draggable="false" ondragstart="return false;" src="0931.jpg" alt="photography" onContextMenu="return false;"/>  
+            <img draggable="false" ondragstart="return false;" src="5278.jpg" alt="0H" onContextMenu="return false;"/>
+        </div>
+        <div class="content" style="display:none;">     
+        </div>
+    </article>
+
+<article class="post photo  index">
+    <div class="content">
+            <img draggable="false" ondragstart="return false;" src="79.jpg" alt="AA" onContextMenu="return false;"/>
+	    <img draggable="false" ondragstart="return false;" src="65.jpg" alt="AC" onContextMenu="return false;"/>
+	    <img draggable="false" ondragstart="return false;" src="80.jpg" alt="AD" onContextMenu="return false;"/>
+        </div>
+        <div class="content" style="display:none;">     
+        </div>
+    </article>
+
+<article class="post photo  index">
+    <div class="content">
+            <img draggable="false" ondragstart="return false;" src="0279.jpg" alt="A" onContextMenu="return false;"/>
+            <img draggable="false" ondragstart="return false;" src="9170.jpg" alt="L" onContextMenu="return false;"/>  
+            <img draggable="false" ondragstart="return false;" src="0007.jpg" alt="Y" onContextMenu="return false;"/>
+        </div>
+        <div class="content" style="display:none;">     
+        </div>
+    </article>
+
+
+<article class="post photo  index">
+    <div class="content">
+            <img draggable="false" ondragstart="return false;" src="3116.jpg" alt="P" onContextMenu="return false;"/>
+            <img draggable="false" ondragstart="return false;" src="3560.jpg" alt="Q" onContextMenu="return false;"/>  
+            <img draggable="false" ondragstart="return false;" src="3338.jpg" alt="R" onContextMenu="return false;"/>
+        </div>
+        <div class="content" style="display:none;">     
+        </div>
+    </article>
+
+<article class="post photo  index">
+    <div class="content">
+	<img draggable="false" ondragstart="return false;" src="2681.jpg" alt="Z" onContextMenu="return false;"/>
+        <img draggable="false" ondragstart="return false;" src="2732.jpg" alt="X" onContextMenu="return false;"/>
+        <img draggable="false" ondragstart="return false;" src="2792.jpg" alt="W" onContextMenu="return false;"/>    
+    </div>
+    <div class="content" style="display:none;">    
+    </div>
+</article>
+
+<!-- post meta -->
+<article class="post photo  index">
+    <div class="content">
+	<img draggable="false" ondragstart="return false;" src="9234.jpg" alt="Studio" onContextMenu="return false;"/>
+        <img draggable="false" ondragstart="return false;" src="9239.jpg" alt="B" onContextMenu="return false;"/>
+        <img draggable="false" ondragstart="return false;" src="05.jpg" alt="C" onContextMenu="return false;"/>    
+    </div>
+    <div class="content" style="display:none;">    
+    </div>
+</article>
+<!-- post meta -->
+<article class="post photo  index">
+    <div class="content">
+        <img draggable="false" ondragstart="return false;" src="06.jpg" alt="G" onContextMenu="return false;"/>
+        <img draggable="false" ondragstart="return false;" src="zooashn.jpg" alt="H" onContextMenu="return false;"/>
+        <img draggable="false" ondragstart="return false;" src="Andu2.jpg" alt="I" onContextMenu="return false;"/>
+    </div>
+    <div class="content" style="display:none;">
+    </div>
+</article>
+
+<article class="post photo  index">
+    <div class="content">
+        <img draggable="false" ondragstart="return false;" src="Andu3.jpg" alt="F" onContextMenu="return false;"/>
+	<img draggable="false" ondragstart="return false;" src="02.jpg" alt="D" onContextMenu="return false;"/>
+        <img draggable="false" ondragstart="return false;" src="Andi23.jpg" alt="E" onContextMenu="return false;"/>
+    </div>
+    <div class="content" style="display:none;">
+    </div>
+</article>
+
+
+<!-- post meta -->
+</main>
 <!-- footer -->
 <footer class="index">
     <div class="left">
-    <div id="copyright">ALY STUDIO 2021</div>
+    <div id="copyright">ALY STUDIO 2020</div>
     </div>
     <div class="clearFix"></div>
 </footer>
