--- a/index.html
+++ b/index.html
@@ -264,9 +264,9 @@
 <main id="main" class=" index">
     <article class="post photo  index">
         <div class="content">
-            <img draggable="false" ondragstart="return false;" src="96.jpg" alt="STUDIO PHOTOS" onContextMenu="return false;"/>
- 	    <img draggable="false" ondragstart="return false;" src="71.jpg" alt="STUDIO PHOTOGRAPHS" onContextMenu="return false;"/>
-
+            <img draggable="false" ondragstart="return false;" src="96.jpg" onContextMenu="return false;"/>
+ 	    <img draggable="false" ondragstart="return false;" src="71.jpg" onContextMenu="return false;"/>
+	    <img draggable="false" ondragstart="return false;" src="96.jpg" onContextMenu="return false;"/>
         </div>
         <div class="content" style="display:none;">     
         </div>
@@ -274,9 +274,9 @@
 
 <article class="post photo  index">
     <div class="content">
-            <img draggable="false" ondragstart="return false;" src="9277.jpg" alt="H1" onContextMenu="return false;"/>
-            <img draggable="false" ondragstart="return false;" src="0931.jpg" alt="photography" onContextMenu="return false;"/>  
-            <img draggable="false" ondragstart="return false;" src="5278.jpg" alt="0H" onContextMenu="return false;"/>
+            <img draggable="false" ondragstart="return false;" src="9277.jpg" onContextMenu="return false;"/>
+            <img draggable="false" ondragstart="return false;" src="0931.jpg" onContextMenu="return false;"/>  
+            <img draggable="false" ondragstart="return false;" src="5278.jpg" onContextMenu="return false;"/>
         </div>
         <div class="content" style="display:none;">     
         </div>
@@ -284,9 +284,9 @@
 
 <article class="post photo  index">
     <div class="content">
-            <img draggable="false" ondragstart="return false;" src="79.jpg" alt="AA" onContextMenu="return false;"/>
-	    <img draggable="false" ondragstart="return false;" src="65.jpg" alt="AC" onContextMenu="return false;"/>
-	    <img draggable="false" ondragstart="return false;" src="80.jpg" alt="AD" onContextMenu="return false;"/>
+            <img draggable="false" ondragstart="return false;" src="79.jpg" onContextMenu="return false;"/>
+	    <img draggable="false" ondragstart="return false;" src="65.jpg" onContextMenu="return false;"/>
+	    <img draggable="false" ondragstart="return false;" src="80.jpg" onContextMenu="return false;"/>
         </div>
         <div class="content" style="display:none;">     
         </div>
@@ -294,9 +294,9 @@
 
 <article class="post photo  index">
     <div class="content">
-            <img draggable="false" ondragstart="return false;" src="0279.jpg" alt="A" onContextMenu="return false;"/>
-            <img draggable="false" ondragstart="return false;" src="9170.jpg" alt="L" onContextMenu="return false;"/>  
-            <img draggable="false" ondragstart="return false;" src="0007.jpg" alt="Y" onContextMenu="return false;"/>
+            <img draggable="false" ondragstart="return false;" src="0279.jpg" onContextMenu="return false;"/>
+            <img draggable="false" ondragstart="return false;" src="9170.jpg" onContextMenu="return false;"/>  
+            <img draggable="false" ondragstart="return false;" src="0007.jpg" onContextMenu="return false;"/>
         </div>
         <div class="content" style="display:none;">     
         </div>
@@ -305,9 +305,9 @@
 
 <article class="post photo  index">
     <div class="content">
-            <img draggable="false" ondragstart="return false;" src="3116.jpg" alt="P" onContextMenu="return false;"/>
-            <img draggable="false" ondragstart="return false;" src="3560.jpg" alt="Q" onContextMenu="return false;"/>  
-            <img draggable="false" ondragstart="return false;" src="3338.jpg" alt="R" onContextMenu="return false;"/>
+            <img draggable="false" ondragstart="return false;" src="3116.jpg" onContextMenu="return false;"/>
+            <img draggable="false" ondragstart="return false;" src="3560.jpg" onContextMenu="return false;"/>  
+            <img draggable="false" ondragstart="return false;" src="3338.jpg" onContextMenu="return false;"/>
         </div>
         <div class="content" style="display:none;">     
         </div>
@@ -315,9 +315,9 @@
 
 <article class="post photo  index">
     <div class="content">
-	<img draggable="false" ondragstart="return false;" src="2681.jpg" alt="Z" onContextMenu="return false;"/>
-        <img draggable="false" ondragstart="return false;" src="2732.jpg" alt="X" onContextMenu="return false;"/>
-        <img draggable="false" ondragstart="return false;" src="2792.jpg" alt="W" onContextMenu="return false;"/>    
+	<img draggable="false" ondragstart="return false;" src="2681.jpg" onContextMenu="return false;"/>
+        <img draggable="false" ondragstart="return false;" src="2732.jpg" onContextMenu="return false;"/>
+        <img draggable="false" ondragstart="return false;" src="2792.jpg" onContextMenu="return false;"/>    
     </div>
     <div class="content" style="display:none;">    
     </div>
@@ -326,9 +326,9 @@
 <!-- post meta -->
 <article class="post photo  index">
     <div class="content">
-	<img draggable="false" ondragstart="return false;" src="9234.jpg" alt="Studio" onContextMenu="return false;"/>
-        <img draggable="false" ondragstart="return false;" src="9239.jpg" alt="B" onContextMenu="return false;"/>
-        <img draggable="false" ondragstart="return false;" src="05.jpg" alt="C" onContextMenu="return false;"/>    
+	<img draggable="false" ondragstart="return false;" src="9234.jpg" onContextMenu="return false;"/>
+        <img draggable="false" ondragstart="return false;" src="9239.jpg" onContextMenu="return false;"/>
+        <img draggable="false" ondragstart="return false;" src="05.jpg" onContextMenu="return false;"/>    
     </div>
     <div class="content" style="display:none;">    
     </div>
@@ -336,9 +336,9 @@
 <!-- post meta -->
 <article class="post photo  index">
     <div class="content">
-        <img draggable="false" ondragstart="return false;" src="06.jpg" alt="G" onContextMenu="return false;"/>
-        <img draggable="false" ondragstart="return false;" src="zooashn.jpg" alt="H" onContextMenu="return false;"/>
-        <img draggable="false" ondragstart="return false;" src="Andu2.jpg" alt="I" onContextMenu="return false;"/>
+        <img draggable="false" ondragstart="return false;" src="06.jpg" onContextMenu="return false;"/>
+        <img draggable="false" ondragstart="return false;" src="zooashn.jpg" onContextMenu="return false;"/>
+        <img draggable="false" ondragstart="return false;" src="Andu2.jpg" onContextMenu="return false;"/>
     </div>
     <div class="content" style="display:none;">
     </div>
@@ -346,9 +346,9 @@
 
 <article class="post photo  index">
     <div class="content">
-        <img draggable="false" ondragstart="return false;" src="Andu3.jpg" alt="F" onContextMenu="return false;"/>
-	<img draggable="false" ondragstart="return false;" src="02.jpg" alt="D" onContextMenu="return false;"/>
-        <img draggable="false" ondragstart="return false;" src="Andi23.jpg" alt="E" onContextMenu="return false;"/>
+        <img draggable="false" ondragstart="return false;" src="Andu3.jpg" onContextMenu="return false;"/>
+	<img draggable="false" ondragstart="return false;" src="02.jpg" onContextMenu="return false;"/>
+        <img draggable="false" ondragstart="return false;" src="Andi23.jpg" onContextMenu="return false;"/>
     </div>
     <div class="content" style="display:none;">
     </div>
