--- a/index.html
+++ b/index.html
@@ -302,6 +302,22 @@
     <div class="content" style="display:none;">    
     </div>
 </article>
+	
+<article class="post photo  index">
+    <div class="content">
+	  <img draggable="false" ondragstart="return false;" src="5278.jpg" onContextMenu="return false;"/>  
+    </div>
+    <div class="content" style="display:none;">    
+    </div>
+</article>	
+
+<article class="post photo  index">
+    <div class="content">
+	  <img draggable="false" ondragstart="return false;" src="aotwnne6.jpg" onContextMenu="return false;"/>  
+    </div>
+    <div class="content" style="display:none;">    
+    </div>
+</article>	
 
 <!-- post meta -->
 </main>
