--- a/index.html
+++ b/index.html
@@ -343,6 +343,15 @@
     <div class="content" style="display:none;">    
     </div>
 </article>
+	
+<article class="post photo  index">
+    <div class="content">
+	  <img draggable="false" ondragstart="return false;" src="GN4A9277-2.jpg" onContextMenu="return false;"/>
+	  <img draggable="false" ondragstart="return false;" src="96.jpg" onContextMenu="return false;"/>
+    </div>
+    <div class="content" style="display:none;">    
+    </div>
+</article>
 
 <!-- post meta -->
 </main>
