--- a/personal.html
+++ b/personal.html
@@ -316,14 +316,17 @@ footer .left{
 <main id="main" class=" index">
     <article class="post photo  index" id=""> 
         <div class="content">
-            <p style="font-size:110%;"><b>January 10th, 2021 1417</b></p>
+            <p style="font-size:110%;"><b>February 6th, 2021</b></p>
             <br>
-            <p><i>Proverbs 13:12 Hope deferred makes the heart sick, but a longing fulfilled is a tree of life.</i></p>
-	    <br>real hope will make you a tree of life.            
+            <p><i>He is absolute</i></p>            
         </div>
         <div class="content" style="display:none;">     
         </div>
     </article>
+	
+<iframe width="600" height="315"
+src="https://youtu.be/tCHImIk8E9Q">
+</iframe>
 
 <footer class="index">
     <div class="left">
