--- a/personal.html
+++ b/personal.html
@@ -319,6 +319,13 @@ footer .left{
             <p style="font-size:110%;"><b>February 6th, 2021</b></p>
             <br>
             <p><i>He is absolute</i></p> 
+        </div>
+        <div class="content" style="display:none;">     
+        </div>
+    </article>
+	
+<article class="post photo  index">
+    <div class="content">
 	    <iframe width="420" height="315"
 	     src="https://youtu.be/tCHImIk8E9Q">
             </iframe>
