--- a/personal.html
+++ b/personal.html
@@ -319,7 +319,7 @@ footer .left{
             <p style="font-size:110%;"><b>February 6th, 2021</b></p>
             <p><i>He is absolute</i></p>
 	    <iframe width="420" height="315"
-	     src="https://youtu.be/tCHImIk8E9Q">
+	     src="https://youtube.com/embed/tCHImIk8E9Q">
             </iframe>
         </div>
         <div class="content" style="display:none;">     
