--- a/personal.html
+++ b/personal.html
@@ -317,7 +317,7 @@ footer .left{
     <article class="post photo  index" id=""> 
         <div class="content">
             <p style="font-size:110%;"><b>February 6th, 2021</b></p>
-            <p><i>He is absolute</i></p>
+            <p><i>His presence is absolute</i></p>
 	    <iframe width="700" height="300"
 	     src="https://youtube.com/embed/tCHImIk8E9Q">
             </iframe>
