--- a/personal.html
+++ b/personal.html
@@ -95,7 +95,7 @@ a#tagTitle{
 #pages li{
     display:inline-block;
     margin-left:0em;
-    margin-bottom:1em;
+    margin-bottom:em;
     padding-right:0.1em;
     line-height:0em;
     border-right:2px solid #222222;
@@ -187,24 +187,18 @@ footer .left{
             font-weight:bold;
             line-height:1.2em;
             margin-top:-0.1em;/*to align with photo posts*/
-            margin-bottom:1em;
+            margin-bottom:0em;
         }
         .content{
             font-size:1em;
             line-height:1.5em;
         }
         .content p{
-            margin-bottom:1em;
+            margin-bottom:0em;
         }
         .content blockquote{
-            margin-bottom:1em;
-        }
-        .chat ul li{
-            margin-bottom:0.5em;
-        }
-        .chat .label{
-            margin-right:0.2em;
-        }
+            margin-bottom:0em;
+
         .index.audio>iframe, .index.video>iframe{
             height:45vh;
         }
@@ -217,10 +211,10 @@ footer .left{
         }
 /******list style******/
         .content ul{
-            margin-bottom:0.7em;
+            margin-bottom:0em;
         }
         .content ol{
-            margin-bottom:0.7em;
+            margin-bottom:0em;
         }
         .chat .content ul li{
             margin-left:0;
@@ -237,19 +231,19 @@ footer .left{
         .content h1{
             font-size:1.4em;
             line-height:1.6em;
-            margin-bottom:0.7em;
+            margin-bottom:0em;
             font-weight:bold;
         }
         .content h2{
             font-size:1.3em;
             line-height:1.6em;
-            margin-bottom:0.7em;
+            margin-bottom:0em;
             font-weight:bold;
         }
         .content h3{
             font-size:1.2em;
             line-height:1.6em;
-            margin-bottom:0.7em;
+            margin-bottom:0em;
             font-weight:bold;
         }
 /***********post meta***********/
@@ -261,7 +255,7 @@ footer .left{
         }
         #meta > li{
             list-style-type:none;
-            padding-bottom:1.2em;
+            padding-bottom:0em;
             text-align:center;
         }
         #caption{
@@ -271,7 +265,7 @@ footer .left{
         }
         #count{
             font-weight:bold;
-            margin-bottom:0.7em;
+            margin-bottom:0em;
         }
         ol.notes{
             list-style-type:none;
@@ -280,7 +274,7 @@ footer .left{
             text-align:center;
             font-weight:normal;
             line-height:1.5em;
-            padding-bottom: 0.5em;
+            padding-bottom: 0em;
             font-size:0.9em;
         }
         ol.notes li a{
