--- a/personal.html
+++ b/personal.html
@@ -40,7 +40,7 @@ header.index{
      position:fixed;
 }
 header.permalink{
-    margin-top:10vh;
+    margin-top:5vh;
     position:relative;
 }
 footer{
@@ -94,7 +94,7 @@ a#tagTitle{
 #pages li{
     display:inline-block;
     margin-left:0em;
-    margin-bottom:em;
+    margin-bottom:0em;
     padding-right:0.1em;
     line-height:0em;
     border-right:2px solid #222222;
