--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
             clear:both;
         }
         body{
-            background-color:#ffffff;
+            background-color:#000000;
             color:#222222;
             font-family:'Montserrat',Sans-Serif;
             font-size:12px;
@@ -243,10 +243,7 @@
     <div id="title">
         <a href="/">ALY</a>
     </div>
-    <ul id="pages">
-                <li><a href="/about.html">About</a></li> 
-                <li><a href="/works.html">Works</a></li>
-                <li><a href="/personal.html">Personal</a></li>            
+    <ul id="pages">         
     </ul>
     <div class="clearFix"></div>
   
@@ -259,99 +256,6 @@
   gtag('config', 'UA-154490996-1');
 </script> 
 </header>
-
-<!-- main -->
-<main id="main" class=" index">
-    <article class="post photo  index">
-        <div class="content">
-	    <img draggable="false" ondragstart="return false;" src="1549.jpg" onContextMenu="return false;"/>
-        </div>
-        <div class="content" style="display:none;">     
-        </div>
-    </article>
-	
-<article class="post photo  index">
-    <div class="content">
-	  <img draggable="false" ondragstart="return false;" src="80.jpg" onContextMenu="return false;"/>
-    </div>
-    <div class="content" style="display:none;">    
-    </div>
-</article>
-	
-<article class="post photo  index">
-    <div class="content">
-	    <img draggable="false" ondragstart="return false;" src="79.jpg" onContextMenu="return false;"/>
-        </div>
-        <div class="content" style="display:none;">     
-        </div>
-    </article>
-
-<article class="post photo  index">
-    <div class="content">
-	    <img draggable="false" ondragstart="return false;" src="9234.jpg" onContextMenu="return false;"/>
-        </div>
-        <div class="content" style="display:none;">     
-        </div>
-    </article>
-
-<article class="post photo  index">
-    <div class="content">
-            <img draggable="false" ondragstart="return false;" src="Andu2.jpg" onContextMenu="return false;"/>
-        </div>
-        <div class="content" style="display:none;">     
-        </div>
-    </article>
-	
-<article class="post photo  index">
-    <div class="content">
-            <img draggable="false" ondragstart="return false;" src="05.jpg" onContextMenu="return false;"/>   
-        </div>
-        <div class="content" style="display:none;">     
-        </div>
-    </article>
-
-<article class="post photo  index">
-    <div class="content">
-	  <img draggable="false" ondragstart="return false;" src="8262.jpg" onContextMenu="return false;"/>  
-    </div>
-    <div class="content" style="display:none;">    
-    </div>
-</article>
-	
-<article class="post photo  index">
-    <div class="content">
-	  <img draggable="false" ondragstart="return false;" src="5278.jpg" onContextMenu="return false;"/>  
-    </div>
-    <div class="content" style="display:none;">    
-    </div>
-</article>	
-
-<article class="post photo  index">
-    <div class="content">
-	  <img draggable="false" ondragstart="return false;" src="aotwnne6.jpg" onContextMenu="return false;"/>  
-    </div>
-    <div class="content" style="display:none;">    
-    </div>
-</article>	
-	
-<article class="post photo  index">
-    <div class="content">
-	  <img draggable="false" ondragstart="return false;" src="A7.jpg" onContextMenu="return false;"/>
-	  <img draggable="false" ondragstart="return false;" src="Andi23.jpg" onContextMenu="return false;"/>
-	  <img draggable="false" ondragstart="return false;" src="0931.jpg" onContextMenu="return false;"/>
-    </div>
-    <div class="content" style="display:none;">    
-    </div>
-</article>
-	
-<article class="post photo  index">
-    <div class="content">
-	  <img draggable="false" ondragstart="return false;" src="GN4A9277-2.jpg" onContextMenu="return false;"/>
-	  <img draggable="false" ondragstart="return false;" src="96.jpg" onContextMenu="return false;"/>
-    </div>
-    <div class="content" style="display:none;">    
-    </div>
-</article>
 
 <!-- post meta -->
 </main>
