--- a/personal.html
+++ b/personal.html
@@ -309,11 +309,8 @@ footer .left{
 <main id="main" class=" index">
     <article class="post photo  index" id=""> 
         <div class="content">
-            <p style="font-size:110%;"><b>February 6th, 2021</b></p>
-            <p><i>His presence is absolute</i></p>
-	    <iframe width="583" height="315"
-	     src="https://youtube.com/embed/tCHImIk8E9Q">
-            </iframe>
+            <p style="font-size:110%;"><b>March 2nd, 2021 2207/b></p>
+            <p><i>discovering > creating</i></p>
         </div>
         <div class="content" style="display:none;">     
         </div>
