--- a/personal.html
+++ b/personal.html
@@ -25,7 +25,7 @@ a:hover{
     clear:both;
 }
 body{
-    background-color:#ffffff;
+    background-color:#000000;
     color:#222222;
     font-family:'Montserrat',Sans-Serif;
     font-size:12px;
@@ -300,8 +300,6 @@ footer .left{
         <a href="/">ALY</a>
     </div>
     <ul id="pages">
-	        <li><a href="/about.html">About</a></li> 
-                <li><a href="/works.html">Works</a></li>
     </ul>
     <div class="clearFix"></div>
 </header>
