--- a/about.html
+++ b/about.html
@@ -26,7 +26,7 @@ a:hover{
     clear:both;
 }
 body{
-    background-color:#ffffff;
+    background-color:#000000;
     color:#222222;
     font-family:'Montserrat',Sans-Serif;
     font-size:12px;
