--- a/about.html
+++ b/about.html
@@ -26,7 +26,7 @@ a:hover{
     clear:both;
 }
 body{
-    background-color:#000000;
+    background-color:#ffffff;
     color:#222222;
     font-family:'Montserrat',Sans-Serif;
     font-size:12px;
@@ -317,9 +317,9 @@ footer .left{
 <main id="main" class=" index">
     <article class="post photo  index" id=""> 
         <div class="content">
-            <p style="font-size:110%;"><b> ? </b></p>
+            <p style="font-size:110%;"><b> Antwone Lee Yang </b></p>
             <br>
-            <p></p>
+            <p>Antwone is a twenty four year old portrait photographer based in Minneapolis. He is currently pursuing a MS in Physicians Assistant Studies.<br>He hopes to shoot films one day.<br><ul><li>If he were a superhero, he would be able to breathe underwater.</li><li>He listens to The Weeknd, DEAN, Alina Baraz, James Blake, Gregory Alan Isakov, & Common Souls.</li><li>He enjoys walking around the lakes, cruising on his penny board, and graphic design</li><li>His most traumatic experience includes - you'll have to buy him dinner first.</li></ul>Go watch his latest short film <a href="https://www.youtube.com/watch?v=i_7sF1LxDbI" style="color: rgb(0,255,0)"><font color="FF00CC">here.</font></a></p>
             <br>
             <br>
         </div>
