--- a/design.html
+++ b/design.html
@@ -1,14 +1,14 @@
 <!DOCTYPE html>
 <html>
 <link rel="shortcut icon" href="/favicon.ico"
-<meta name="description" content="AREYOUEVENREAL" />
+<meta name="description" content="ALY"/>
 <title>AREYOUEVENREAL</title>
 <meta name="viewport" content="width=device-width, height=device-height, initial-scale=1, minimum-scale=1"/>
 <meta name="text:Title font" content="Montserrat"/>
 <meta name="text:Content font" content="Montserrat"/>
 <meta name="color:Font color" content="#D3D3D3"/>
 <meta name="text:Google analytics ID" content=""/>
-<meta name="text:Copyright" content="AREYOUEVENREAL"/>
+<meta name="text:Copyright" content="ALY STUDIO"/>
 <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Montserrat">
 <link href='https://fonts.googleapis.com/css?family=Montserrat:600' rel='stylesheet' type='text/css'>
 
@@ -283,7 +283,7 @@
 <!-- footer -->
 <footer class="index">
     <div class="left">
-    <div id="copyright">AREYOUEVENREAL 2021</div>
+    <div id="copyright">ALY STUDIO 2021</div>
     </div>
     <div class="clearFix"></div>
 </footer>
