--- a/design.html
+++ b/design.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <link rel="shortcut icon" href="/favicon.ico"
-<meta name="description" content="ALY"/>
+<meta name="description" content="ALY STUDIO"/>
 <title>AREYOUEVENREAL</title>
 <meta name="viewport" content="width=device-width, height=device-height, initial-scale=1, minimum-scale=1"/>
 <meta name="text:Title font" content="Montserrat"/>
@@ -229,7 +229,7 @@
 <!-- header -->
 <header class="index">
     <div id="title">
-        <a href="/">AREYOUEVENREAL</a>
+        <a href="/">ALY</a>
     </div>
     <ul id="pages">
                 <li><a href="/about.html">About</a></li>            
