--- a/design.html
+++ b/design.html
@@ -242,8 +242,8 @@
 <main id="main" class=" index">
     <article class="post photo  index">
         <div class="content">
-            <img draggable="false" ondragstart="return false;" src="This-is-different-01.jpg" onContextMenu="return false;"/>
- 	    <img draggable="false" ondragstart="return false;" src="MISHKO3.jpg" onContextMenu="return false;"/>
+            <img draggable="false" ondragstart="return false;" src="different.jpg" onContextMenu="return false;"/>
+ 	    <img draggable="false" ondragstart="return false;" src="010101.jpg" onContextMenu="return false;"/>
 
         </div>
         <div class="content" style="display:none;">     
@@ -252,8 +252,8 @@
 
 <article class="post photo  index">
     <div class="content">
-            <img draggable="false" ondragstart="return false;" src="No-Levels-gray.jpg" onContextMenu="return false;"/>
-            <img draggable="false" ondragstart="return false;" src="getinonthebest.jpg" onContextMenu="return false;"/>  
+            <img draggable="false" ondragstart="return false;" src="Levels.jpg" onContextMenu="return false;"/>
+            <img draggable="false" ondragstart="return false;" src="thebest.jpg" onContextMenu="return false;"/>  
         </div>
         <div class="content" style="display:none;">     
         </div>
@@ -262,8 +262,8 @@
 <article class="post photo  index">
     <div class="content">
             <img draggable="false" ondragstart="return false;" src="PRESENCE.jpg" onContextMenu="return false;"/>
-            <img draggable="false" ondragstart="return false;" src="isreal-01.jpg" onContextMenu="return false;"/>
-            <img draggable="false" ondragstart="return false;" src="FREEDOMAVAILABLE-01.jpg" onContextMenu="return false;"/>
+            <img draggable="false" ondragstart="return false;" src="isreal.jpg" onContextMenu="return false;"/>
+            <img draggable="false" ondragstart="return false;" src="Available.jpg" onContextMenu="return false;"/>
         </div>
         <div class="content" style="display:none;">     
         </div>
@@ -271,7 +271,17 @@
         
 <article class="post photo  index">
     <div class="content">
-            <img draggable="false" ondragstart="return false;" src="NOTRELIGION-01.png" onContextMenu="return false;"/>
+            <img draggable="false" ondragstart="return false;" src="Religion.png" onContextMenu="return false;"/>
+            <img draggable="false" ondragstart="return false;" src="Religion.png" onContextMenu="return false;"/>
+            <img draggable="false" ondragstart="return false;" src="forreal.png" onContextMenu="return false;"/>
+        </div>
+        <div class="content" style="display:none;">     
+        </div>
+    </article>
+        
+<article class="post photo  index">
+    <div class="content">
+            <img draggable="false" ondragstart="return false;" src="HIGHSANDLOWS.png" onContextMenu="return false;"/>
         </div>
         <div class="content" style="display:none;">     
         </div>
