--- a/wedding.html
+++ b/wedding.html
@@ -289,6 +289,8 @@
 <article class="post photo  index">
     <div class="content">
 	    <img draggable="false" ondragstart="return false;" src="w004.jpg" onContextMenu="return false;"/>
+	    <img draggable="false" ondragstart="return false;" src="w005.jpg" onContextMenu="return false;"/>
+	    <img draggable="false" ondragstart="return false;" src="w006.jpg" onContextMenu="return false;"/>
         </div>
         <div class="content" style="display:none;">     
         </div>
@@ -296,7 +298,7 @@
 
 <article class="post photo  index">
     <div class="content">
-            <img draggable="false" ondragstart="return false;" src="Andu2.jpg" onContextMenu="return false;"/>
+            <img draggable="false" ondragstart="return false;" src="w0007.jpg" onContextMenu="return false;"/>
         </div>
         <div class="content" style="display:none;">     
         </div>
