--- a/wedding.html
+++ b/wedding.html
@@ -306,7 +306,9 @@
 	
 <article class="post photo  index">
     <div class="content">
-            <img draggable="false" ondragstart="return false;" src="05.jpg" onContextMenu="return false;"/>   
+            <img draggable="false" ondragstart="return false;" src="w0008.jpg" onContextMenu="return false;"/>
+	    <img draggable="false" ondragstart="return false;" src="w0009.jpg" onContextMenu="return false;"/>   
+	    <img draggable="false" ondragstart="return false;" src="w0010.jpg" onContextMenu="return false;"/>
         </div>
         <div class="content" style="display:none;">     
         </div>
@@ -314,7 +316,9 @@
 
 <article class="post photo  index">
     <div class="content">
-	  <img draggable="false" ondragstart="return false;" src="8262.jpg" onContextMenu="return false;"/>  
+	  <img draggable="false" ondragstart="return false;" src="w0011.jpg" onContextMenu="return false;"/>
+	  <img draggable="false" ondragstart="return false;" src="w0012.jpg" onContextMenu="return false;"/>
+	  <img draggable="false" ondragstart="return false;" src="w0013.jpg" onContextMenu="return false;"/>
     </div>
     <div class="content" style="display:none;">    
     </div>
