--- a/index.html
+++ b/index.html
@@ -328,7 +328,7 @@
 
 <article class="post photo  index">
     <div class="content">
-	  <img draggable="false" ondragstart="return false;" src="aotwnne6.jpg" onContextMenu="return false;"/>  
+	  <img draggable="false" ondragstart="return false;" src="2792.jpg" onContextMenu="return false;"/>  
     </div>
     <div class="content" style="display:none;">    
     </div>
