--- a/about.html
+++ b/about.html
@@ -319,7 +319,7 @@ footer .left{
         <div class="content">
             <p style="font-size:110%;"><b> Antwone Lee Yang </b></p>
             <br>
-            <p>Antwone is a twenty four year old portrait photographer based in Minneapolis. He is currently pursuing a MS in Physicians Assistant Studies.<br>He hopes to shoot films one day.<br><ul><li>If he were a superhero, he would be able to breathe underwater.</li><li>He listens to The Weeknd, DEAN, Alina Baraz, James Blake, Gregory Alan Isakov, & Common Souls.</li><li>He enjoys walking around the lakes, cruising on his penny board, and <a href="/design.html" style="color: rgb(0,255,0)"><font color="FF00CC">graphic design.</font></a></li><li>His most traumatic experience includes - you'll have to buy him dinner first.</li></ul>Go watch his latest short film <a href="https://www.youtube.com/watch?v=i_7sF1LxDbI" style="color: rgb(0,255,0)"><font color="FF00CC">here.</font></a></p>
+            <p>Antwone is a twenty four year old portrait photographer based in Minneapolis. He is currently pursuing a MS in Physicians Assistant Studies.<br>He hopes to shoot films one day.<br><ul><li>If he were a superhero, he would be able to breathe underwater.</li><li>He listens to The Weeknd, DEAN, Alina Baraz, James Blake, Gregory Alan Isakov, & Common Souls.</li><li>He enjoys walking around the lakes, cruising on his penny board, and <a href="/design.html" style="color: rgb(0,255,0)">graphic design.</font></a></li><li>His most traumatic experience includes - you'll have to buy him dinner first.</li></ul>Go watch his latest short film <a href="https://www.youtube.com/watch?v=i_7sF1LxDbI" style="color: rgb(0,255,0)"><font color="FF00CC">here.</font></a></p>
             <br>
             <br>
         </div>
