--- a/personal.html
+++ b/personal.html
@@ -25,7 +25,7 @@ a:hover{
     clear:both;
 }
 body{
-    background-color:#000000;
+    background-color:#222222;
     color:#222222;
     font-family:'Montserrat',Sans-Serif;
     font-size:12px;
@@ -307,7 +307,7 @@ footer .left{
 <main id="main" class=" index">
     <article class="post photo  index" id=""> 
         <div class="content">
-            <p style="font-size:110%;"><b>March 2nd, 2021 2207/b></p>
+            <p style="font-size:110%;"><b>April 11th, 2021 2014</p>
             <p><i>discovering > creating</i></p>
         </div>
         <div class="content" style="display:none;">     
