--- a/personal.html
+++ b/personal.html
@@ -25,7 +25,7 @@ a:hover{
     clear:both;
 }
 body{
-    background-color:#222222;
+    background-color:#FFFFFF;
     color:#222222;
     font-family:'Montserrat',Sans-Serif;
     font-size:12px;
