--- a/index.html
+++ b/index.html
@@ -336,6 +336,7 @@
 	
 <article class="post photo  index">
     <div class="content">
+	  <img draggable="false" ondragstart="return false;" src="GN4.jpg" onContextMenu="return false;"/>
 	  <img draggable="false" ondragstart="return false;" src="A7.jpg" onContextMenu="return false;"/>
 	  <img draggable="false" ondragstart="return false;" src="Andi23.jpg" onContextMenu="return false;"/>
 	  <img draggable="false" ondragstart="return false;" src="0931.jpg" onContextMenu="return false;"/>
