--- a/design.html
+++ b/design.html
@@ -281,6 +281,7 @@
 <article class="post photo  index">
     <div class="content">
             <img draggable="false" ondragstart="return false;" src="HIGHSANDLOWS.png" onContextMenu="return false;"/>
+            <img draggable="false" ondragstart="return false;" src="waves.png" onContextMenu="return false;"/>
         </div>
         <div class="content" style="display:none;">     
         </div>
