--- a/design.html
+++ b/design.html
@@ -272,7 +272,7 @@
 <article class="post photo  index">
     <div class="content">
             <img draggable="false" ondragstart="return false;" src="Religion.png" onContextMenu="return false;"/>
-            <img draggable="false" ondragstart="return false;" src="forreal.png" onContextMenu="return false;"/>
+            <img draggable="false" ondragstart="return false;" src="forreal.jpg" onContextMenu="return false;"/>
         </div>
         <div class="content" style="display:none;">     
         </div>
