--- a/design.html
+++ b/design.html
@@ -282,6 +282,7 @@
     <div class="content">
             <img draggable="false" ondragstart="return false;" src="HIGHSANDLOWS.png" onContextMenu="return false;"/>
             <img draggable="false" ondragstart="return false;" src="waves.png" onContextMenu="return false;"/>
+	    <img draggable="false" ondragstart="return false;" src="just.png" onContextMenu="return false;"/>
         </div>
         <div class="content" style="display:none;">     
         </div>
