--- a/design.html
+++ b/design.html
@@ -288,6 +288,13 @@
         </div>
     </article>
 
+<article class="post photo  index">
+    <div class="content">
+            <img draggable="false" ondragstart="return false;" src="STEEP.png" onContextMenu="return false;"/>
+        </div>
+        <div class="content" style="display:none;">     
+        </div>
+    </article>
 
 <!-- post meta -->
 </main>
