--- a/design.html
+++ b/design.html
@@ -291,6 +291,7 @@
 <article class="post photo  index">
     <div class="content">
             <img draggable="false" ondragstart="return false;" src="STEEP.png" onContextMenu="return false;"/>
+	    <img draggable="false" ondragstart="return false;" src="missout.png" onContextMenu="return false;"/>
         </div>
         <div class="content" style="display:none;">     
         </div>
