--- a/personal.html
+++ b/personal.html
@@ -307,8 +307,12 @@ footer .left{
 <main id="main" class=" index">
     <article class="post photo  index" id=""> 
         <div class="content">
-            <p style="font-size:110%;"><b>April 11th, 2021 2014</p>
-            <p><i>discovering > creating</i></p>
+            <p style="font-size:110%;"><b>May 29th, 2021 10:20PM</p>
+            <p><i>There’s more to come: We continue to shout our praise even when we’re hemmed in with troubles,
+                because we know how troubles can develop passionate patience in us, and how that patience in turn
+                forges the tempered steel of virtue, keeping us alert for whatever God will do next. In alert expectancy
+                such as this, we’re never left feeling shortchanged. Quite the contrary—we can’t round up enough containers
+                to hold everything God generously pours into our lives through the Holy Spirit!</i></p>
         </div>
         <div class="content" style="display:none;">     
         </div>
