--- a/personal.html
+++ b/personal.html
@@ -308,11 +308,14 @@ footer .left{
     <article class="post photo  index" id=""> 
         <div class="content">
             <p style="font-size:110%;"><b>May 29th, 2021 10:20PM</p>
-            <p><i>There’s more to come:<br>We continue to shout our praise even when we’re hemmed in with troubles,<br>
-                because we know how troubles can develop passionate patience in us, <br>and how that patience in turn
-                forges the tempered steel of virtue, <br>keeping us alert for whatever God will do next. In alert expectancy
-                such as this, we’re never left feeling shortchanged. <br>Quite the contrary—we can’t round up enough containers
-                to hold everything God generously pours into our lives through the Holy Spirit!</i></p>
+            <p><i>There’s more to come:
+                <br>We continue to shout our praise even when we’re hemmed in with troubles,
+                <br>because we know how troubles can develop passionate patience in us,
+                <br>and how that patience in turn forges the tempered steel of virtue,
+                <br>keeping us alert for whatever God will do next.
+                <br>In alert expectancy such as this, we’re never left feeling shortchanged.
+                <br>Quite the contrary—we can’t round up enough containers to hold
+                <br>everything God generously pours into our lives through the Holy Spirit!</i></p>
         </div>
         <div class="content" style="display:none;">     
         </div>
