--- a/personal.html
+++ b/personal.html
@@ -316,6 +316,8 @@ footer .left{
                 <br>In alert expectancy such as this, we’re never left feeling shortchanged.
                 <br>Quite the contrary—we can’t round up enough containers to hold
                 <br>everything God generously pours into our lives through the Holy Spirit!</i></p>
+                <br><br>even when it hurts or doesn't make sense,
+            <br>Jesus changes everything.
         </div>
         <div class="content" style="display:none;">     
         </div>
