--- a/design.html
+++ b/design.html
@@ -292,6 +292,7 @@
     <div class="content">
             <img draggable="false" ondragstart="return false;" src="STEEP.png" onContextMenu="return false;"/>
 	    <img draggable="false" ondragstart="return false;" src="missout.png" onContextMenu="return false;"/>
+	    <img draggable="false" ondragstart="return false;" src="e210.png" onContextMenu="return false;"/>
         </div>
         <div class="content" style="display:none;">     
         </div>
