--- a/wedding.html
+++ b/wedding.html
@@ -264,11 +264,19 @@
 <main id="main" class=" index">
     <article class="post photo  index">
         <div class="content">
-	    <img draggable="false" ondragstart="return false;" src="w0003.jpg" onContextMenu="return false;"/>
+	    <img draggable="false" ondragstart="return false;" src="IMG_4042.jpg" onContextMenu="return false;"/>
         </div>
         <div class="content" style="display:none;">     
         </div>
     </article>
+	
+<article class="post photo  index">
+    <div class="content">
+	  <img draggable="false" ondragstart="return false;" src="w0003.jpg" onContextMenu="return false;"/>
+    </div>
+    <div class="content" style="display:none;">    
+    </div>
+</article>
 	
 <article class="post photo  index">
     <div class="content">
