--- a/wedding.html
+++ b/wedding.html
@@ -272,6 +272,14 @@
 	
 <article class="post photo  index">
     <div class="content">
+	  <img draggable="false" ondragstart="return false;" src="IMG_4159.jpg" onContextMenu="return false;"/>
+    </div>
+    <div class="content" style="display:none;">    
+    </div>
+</article>
+	
+<article class="post photo  index">
+    <div class="content">
 	  <img draggable="false" ondragstart="return false;" src="w0003.jpg" onContextMenu="return false;"/>
     </div>
     <div class="content" style="display:none;">    
