--- a/wedding.html
+++ b/wedding.html
@@ -273,6 +273,7 @@
 <article class="post photo  index">
     <div class="content">
 	  <img draggable="false" ondragstart="return false;" src="IMG_4159.jpg" onContextMenu="return false;"/>
+	  <img draggable="false" ondragstart="return false;" src="IMG_4185.jpg" onContextMenu="return false;"/>
     </div>
     <div class="content" style="display:none;">    
     </div>
