--- a/wedding.html
+++ b/wedding.html
@@ -294,14 +294,6 @@
     <div class="content" style="display:none;">    
     </div>
 </article>
-	
-<article class="post photo  index">
-    <div class="content">
-	    <img draggable="false" ondragstart="return false;" src="w0002.jpg" onContextMenu="return false;"/>
-        </div>
-        <div class="content" style="display:none;">     
-        </div>
-    </article>
 
 <article class="post photo  index">
     <div class="content">
@@ -322,8 +314,8 @@
 <article class="post photo  index">
     <div class="content">
 	  <img draggable="false" ondragstart="return false;" src="w0013.jpg" onContextMenu="return false;"/>
-	  <img draggable="false" ondragstart="return false;" src="w0012.jpg" onContextMenu="return false;"/>
-	  <img draggable="false" ondragstart="return false;" src="w0011.jpg" onContextMenu="return false;"/>
+	  <img draggable="false" ondragstart="return false;" src="GN4A600.jpg" onContextMenu="return false;"/>
+	  <img draggable="false" ondragstart="return false;" src="GN4A4581.jpg" onContextMenu="return false;"/>
     </div>
     <div class="content" style="display:none;">    
     </div>
@@ -333,6 +325,16 @@
     <div class="content">
 	  <img draggable="false" ondragstart="return false;" src="IMG_6040.jpg" onContextMenu="return false;"/>
 	  <img draggable="false" ondragstart="return false;" src="IMG_6067.jpg" onContextMenu="return false;"/>
+    </div>
+    <div class="content" style="display:none;">    
+    </div>
+</article>
+	
+<article class="post photo  index">
+    <div class="content">
+	  <img draggable="false" ondragstart="return false;" src="GN4A5421.jpg" onContextMenu="return false;"/>
+	  <img draggable="false" ondragstart="return false;" src="GN4A5419.jpg" onContextMenu="return false;"/>
+	  <img draggable="false" ondragstart="return false;" src="GN4A5428.jpg" onContextMenu="return false;"/>
     </div>
     <div class="content" style="display:none;">    
     </div>
