--- a/wedding.html
+++ b/wedding.html
@@ -264,7 +264,7 @@
 <main id="main" class=" index">
     <article class="post photo  index">
         <div class="content">
-	    <img draggable="false" ondragstart="return false;" src="IMG_4042.jpg" onContextMenu="return false;"/>
+	    <img draggable="false" ondragstart="return false;" src="IMG_1301-2.jpg" onContextMenu="return false;"/>
         </div>
         <div class="content" style="display:none;">     
         </div>
@@ -272,12 +272,12 @@
 	
 <article class="post photo  index">
     <div class="content">
-	  <img draggable="false" ondragstart="return false;" src="IMG_4159.jpg" onContextMenu="return false;"/>
-	  <img draggable="false" ondragstart="return false;" src="IMG_4185.jpg" onContextMenu="return false;"/>
+	  <img draggable="false" ondragstart="return false;" src="IMG_4042.jpg" onContextMenu="return false;"/>
     </div>
     <div class="content" style="display:none;">    
     </div>
 </article>
+		
 	
 <article class="post photo  index">
     <div class="content">
