--- a/wedding.html
+++ b/wedding.html
@@ -305,7 +305,7 @@
 	
 <article class="post photo  index">
     <div class="content">  
-	    <img draggable="false" ondragstart="return false;" src="w0010.jpg" onContextMenu="return false;"/>
+	    <img draggable="false" ondragstart="return false;" src="GN4A4433.jpg" onContextMenu="return false;"/>
         </div>
         <div class="content" style="display:none;">     
         </div>
