--- a/wedding.html
+++ b/wedding.html
@@ -264,11 +264,19 @@
 <main id="main" class=" index">
     <article class="post photo  index">
         <div class="content">
-	    <img draggable="false" ondragstart="return false;" src="IMG_1301-2.jpg" onContextMenu="return false;"/>
+	   <img draggable="false" ondragstart="return false;" src="IMG_1301-2.jpg" onContextMenu="return false;"/>
         </div>
         <div class="content" style="display:none;">     
         </div>
     </article>
+	
+<article class="post photo  index">
+    <div class="content">
+	  <img draggable="false" ondragstart="return false;" src="1549.jpg" onContextMenu="return false;"/>
+    </div>
+    <div class="content" style="display:none;">    
+    </div>
+</article>
 	
 <article class="post photo  index">
     <div class="content">
@@ -313,6 +321,14 @@
 
 <article class="post photo  index">
     <div class="content">
+	    <img draggable="false" ondragstart="return false;" src="79.jpg" onContextMenu="return false;"/>
+        </div>
+        <div class="content" style="display:none;">     
+        </div>
+    </article>
+	
+<article class="post photo  index">
+    <div class="content">
 	  <img draggable="false" ondragstart="return false;" src="w0013.jpg" onContextMenu="return false;"/>
 	  <img draggable="false" ondragstart="return false;" src="GN4A4600.jpg" onContextMenu="return false;"/>
 	  <img draggable="false" ondragstart="return false;" src="GN4A4581.jpg" onContextMenu="return false;"/>
@@ -340,6 +356,14 @@
     </div>
 </article>
 
+<article class="post photo  index">
+    <div class="content">
+	  <img draggable="false" ondragstart="return false;" src="80.jpg" onContextMenu="return false;"/>
+    </div>
+    <div class="content" style="display:none;">    
+    </div>
+</article>
+	
 <!-- post meta -->
 </main>
 <!-- footer -->
