--- a/Degroots.html
+++ b/Degroots.html
@@ -320,6 +320,22 @@
     </article>
 
 <article class="post photo  index">
+    <div class="content">  
+	    <img draggable="false" ondragstart="return false;" src="GN4A4461.jpg" onContextMenu="return false;"/>
+        </div>
+        <div class="content" style="display:none;">     
+        </div>
+    </article>
+	
+<article class="post photo  index">
+    <div class="content">  
+	    <img draggable="false" ondragstart="return false;" src="GN4A4501.jpg" onContextMenu="return false;"/>
+        </div>
+        <div class="content" style="display:none;">     
+        </div>
+    </article>
+	
+<article class="post photo  index">
     <div class="content">
 	    <img draggable="false" ondragstart="return false;" src="79.jpg" onContextMenu="return false;"/>
         </div>
@@ -330,6 +346,7 @@
 <article class="post photo  index">
     <div class="content">
 	  <img draggable="false" ondragstart="return false;" src="GN4A4631.jpg" onContextMenu="return false;"/>
+	  <img draggable="false" ondragstart="return false;" src="GN4A4643.jpg" onContextMenu="return false;"/>
 	  <img draggable="false" ondragstart="return false;" src="GN4A4600.jpg" onContextMenu="return false;"/>
 	  <img draggable="false" ondragstart="return false;" src="GN4A4581.jpg" onContextMenu="return false;"/>
     </div>
