--- a/personal.html
+++ b/personal.html
@@ -307,7 +307,7 @@ footer .left{
 <main id="main" class=" index">
     <article class="post photo  index" id=""> 
         <div class="content">
-            <p style="font-size:110%;"><b>May 29th, 2021 10:20PM</p>
+            <p style="font-size:110%;"><b>July 1st, 2021 1132</p>
             <p><i>Romans 5:3-5<br>There’s more to come:
                 <br>We continue to shout our praise even when we’re hemmed in with troubles,
                 <br>because we know how troubles can develop passionate patience in us,
