--- a/design.html
+++ b/design.html
@@ -297,6 +297,14 @@
         <div class="content" style="display:none;">     
         </div>
     </article>
+	
+<article class="post photo  index">
+    <div class="content">
+            <img draggable="false" ondragstart="return false;" src="PSALM-33.21.png" onContextMenu="return false;"/>
+        </div>
+        <div class="content" style="display:none;">     
+        </div>
+    </article>
 
 <!-- post meta -->
 </main>
