--- a/design.html
+++ b/design.html
@@ -301,6 +301,7 @@
 <article class="post photo  index">
     <div class="content">
             <img draggable="false" ondragstart="return false;" src="PSALM-33.21.png" onContextMenu="return false;"/>
+	    <img draggable="false" ondragstart="return false;" src="316.png" onContextMenu="return false;"/>
         </div>
         <div class="content" style="display:none;">     
         </div>
