--- a/design.html
+++ b/design.html
@@ -306,6 +306,14 @@
         <div class="content" style="display:none;">     
         </div>
     </article>
+	
+<article class="post photo  index">
+    <div class="content">
+            <img draggable="false" ondragstart="return false;" src="cPROMO.png" onContextMenu="return false;"/>
+        </div>
+        <div class="content" style="display:none;">     
+        </div>
+    </article>
 
 <!-- post meta -->
 </main>
