--- a/design.html
+++ b/design.html
@@ -300,6 +300,7 @@
 	
 <article class="post photo  index">
     <div class="content">
+	    <img draggable="false" ondragstart="return false;" src="PSALM34.8.png" onContextMenu="return false;"/>
             <img draggable="false" ondragstart="return false;" src="PSALM-33.21.png" onContextMenu="return false;"/>
 	    <img draggable="false" ondragstart="return false;" src="316.png" onContextMenu="return false;"/>
         </div>
