--- a/about.html
+++ b/about.html
@@ -325,7 +325,7 @@ footer .left{
             <br>He hopes to shoot films one day.
             <br>
             <ul><li>If he were a superhero, he would be able to breathe under water.
-            </li><li>He listens to The Weeknd, RY X, Galimatias, & The Lumineers.
+            </li><li>He listens to RY X, Galimatias, & The Lumineers.
             </li><li>He enjoys walking around the lakes, cruising on his penny board, and <a href="/design.html" style="color: rgb(0,255,0)"><font color="FF00CC">graphic design.</font></a>
             </li><li>His most traumatic experience includes - you'll have to buy him dinner first.
             </li></ul>Go watch his latest short film <a href="https://www.youtube.com/watch?v=i_7sF1LxDbI" style="color: rgb(0,255,0)"><font color="FF00CC">here.</font></a></p>
