--- a/index.html
+++ b/index.html
@@ -345,6 +345,8 @@
 <article class="post photo  index">
     <div class="content">
 	  <img draggable="false" ondragstart="return false;" src="2792.jpg" onContextMenu="return false;"/>  
+	  <img draggable="false" ondragstart="return false;" src="GN4A2732.jpg" onContextMenu="return false;"/>  
+
     </div>
     <div class="content" style="display:none;">    
     </div>
