--- a/design.html
+++ b/design.html
@@ -311,6 +311,7 @@
 <article class="post photo  index">
     <div class="content">
             <img draggable="false" ondragstart="return false;" src="cPROMO.png" onContextMenu="return false;"/>
+            <img draggable="false" ondragstart="return false;" src="feargod.png" onContextMenu="return false;"/>
         </div>
         <div class="content" style="display:none;">     
         </div>
