--- a/design.html
+++ b/design.html
@@ -313,7 +313,7 @@
             <img draggable="false" ondragstart="return false;" src="cPROMO.png" onContextMenu="return false;"/>
             <img draggable="false" ondragstart="return false;" src="feargod.png" onContextMenu="return false;"/>
 	    <img draggable="false" ondragstart="return false;" src="25.png" onContextMenu="return false;"/>
-
+	    <img draggable="false" ondragstart="return false;" src="godeep.png" onContextMenu="return false;"/>
         </div>
         <div class="content" style="display:none;">     
         </div>
