--- a/design.html
+++ b/design.html
@@ -312,8 +312,16 @@
     <div class="content">
             <img draggable="false" ondragstart="return false;" src="cPROMO.png" onContextMenu="return false;"/>
             <img draggable="false" ondragstart="return false;" src="feargod.png" onContextMenu="return false;"/>
-	    <img draggable="false" ondragstart="return false;" src="25.png" onContextMenu="return false;"/>
 	    <img draggable="false" ondragstart="return false;" src="godeep.png" onContextMenu="return false;"/>
+        </div>
+        <div class="content" style="display:none;">     
+        </div>
+    </article>
+	
+<article class="post photo  index">
+    <div class="content">
+	    <img draggable="false" ondragstart="return false;" src="25.png" onContextMenu="return false;"/>
+	    <img draggable="false" ondragstart="return false;" src="gradient25-01.png" onContextMenu="return false;"/>
         </div>
         <div class="content" style="display:none;">     
         </div>
