--- a/design.html
+++ b/design.html
@@ -2,7 +2,7 @@
 <html>
 <link rel="shortcut icon" href="/favicon.ico"
 <meta name="description" content="ALY STUDIO"/>
-<title>AREYOUEVENREAL</title>
+<title>DESIGN</title>
 <meta name="viewport" content="width=device-width, height=device-height, initial-scale=1, minimum-scale=1"/>
 <meta name="text:Title font" content="Montserrat"/>
 <meta name="text:Content font" content="Montserrat"/>
