--- a/about.html
+++ b/about.html
@@ -320,13 +320,14 @@ footer .left{
             <p style="font-size:110%;"><b> Antwone Lee Yang </b></p>
             <br>
             <p>Antwone is a twenty five year old portrait photographer<br>
-               based in Minneapolis. He is currently pursuing a MS in<br>
-               Physicians Assistant Studies.<br>
+               based in Minneapolis.<br>
+               <br>
             <br>He hopes to shoot films one day.
             <br>
-            <ul><li>If he were a superhero, he would be able to breathe under water.
+            <ul><li>If he were a superhero, he would be able to fly REALLY FAST.
             </li><li>He listens to RY X, Galimatias, & The Lumineers.
-            </li><li>He enjoys walking around the lakes, cruising on his penny board, and <a href="/design.html" style="color: rgb(0,255,0)"><font color="FF00CC">graphic design.</font></a>
+            </li><li>He enjoys walking around the lakes, cruising on his penny board, and <br>
+                     <a href="/design.html" style="color: rgb(0,255,0)"><font color="FF00CC">graphic design.</font></a>
             </li><li>His most traumatic experience includes - you'll have to buy him dinner first.
             </li></ul>Go watch his latest short film <a href="https://www.youtube.com/watch?v=i_7sF1LxDbI" style="color: rgb(0,255,0)"><font color="FF00CC">here.</font></a></p>
             <br>
