--- a/about.html
+++ b/about.html
@@ -320,8 +320,8 @@ footer .left{
             <p style="font-size:110%;"><b> Antwone Lee Yang </b></p>
             <br>
             <p>Antwone is a twenty five year old portrait photographer<br>
-               based in Minneapolis.<br>
-               <br>
+               based in Minneapolis.
+            <br>
             <br>He hopes to shoot films one day.
             <br>
             <ul><li>If he were a superhero, he would be able to fly REALLY FAST.
